Corrected align-items; items have heights dependent upon content

--- a/styles.css
+++ b/styles.css
@@ -29,8 +29,10 @@ body {
 .mainContent {
   margin-top: 75px;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  align-items: flex-start;
+  justify-content: space-evenly;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 /* Advert positioning */
@@ -64,7 +66,7 @@ body {
 /* Blog posts container*/
 .blogPosts {
   display: flex;
-  flex-direction: row;
+  align-items: flex-start;
   justify-content: space-between;
 }
 
@@ -75,7 +77,7 @@ body {
   padding: 0px 10px;
   margin: 4px;
   float: left;
-  width: 25%;
+  width: 33.3%;
 }
 
 /* Blog post headings */
@@ -91,5 +93,3 @@ h2, h3, h4 {
   clear: both;
   margin-bottom: 0;
 }
-
-
